--- a/lab-02-dependency-injection/lab2/build.gradle
+++ b/lab-02-dependency-injection/lab2/build.gradle
@@ -11,10 +11,9 @@ repositories {
 
 dependencies {
     implementation 'javax.inject:javax.inject:1'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
-
 
 
 application {
@@ -23,12 +22,4 @@ application {
 
 test {
     useJUnitPlatform()
-}
-
-sourceSets {
-    main {
-        java {
-            srcDir 'src'
-        }
-    }
 }
